--- a/src/main/resources/static/Index.html
+++ b/src/main/resources/static/Index.html
@@ -13,9 +13,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <div>Daftar Pembelian</div>
         <hr>
         <form action="/viewbayar">
-            Nama Buah     : <input type="text" name="var_namabuah"><br>
-            Harga Buah    : <input type="text" name="var_hargakilo"><br>
-            Jumlah Beli   : <input type="text" name="var_jumlahbeli"><br>
+            Nama Buah       : <input type="text" name="var_namabuah"><br>
+            Harga Buah      : <input type="text" name="var_hargakilo"><br>
+            Jumlah Beli     : <input type="text" name="var_jumlahbeli"><br>
+            Uang Customer   : <input type="text" name="var_uang"><br>
             <button type="submit"> BELI</button>
     </body>
 </html>
